          (6)add interrupt vector for extern interrupt 2(EXTI-2) and extern interrupt 3(EXTI-3) in <stc89.h>

>Version :v1.0.3
 Alias   :V1R2
 Date    :2019-02-04
 Note    :(1)fix bug of function GPIO_getBitValue
          (2)optimize note of source code file
          (3)update Makefile to v0.1.2
          (4)modify errormap.txt
          (5)fix bug of example/exti/exti-toggleIo.c
          (6)optimize function EXTI_setPriority
          (7)optimize function RST_reset
          (8)fix bug of function UART_getBaudGeneratorInitValue, optimize function of UART_switchTim
          (9)fix bug of function ISP_writeByte
          (10)optimize function ISP_eraseByte
          (11)rename member of enumeration type TIM_function, TIM2_function and RST_bootarea
          (12)fix fatal bug in function TIM_INT_setPriority

>Version :v1.0.4
 Alias   :
 Date    :2019-03-03
 Note    :(1)fix header file include bug in util.c
          (2)optimize maxTick into macro definition TIM2_MAXTICK in tim2.h
          (3)fix bug of function UART_INT_setPriority in uart.c
          (4)provide bit operation function
          (5)add new example exti-interruptPriority.c

>Version :v1.0.5
 Alias   :
 Date    :2019-04-09
 Note    :(1)adjust coding style of example files
          (2)optimize bit operation function
          (3)rename log.txt as ChangeLog
          (4)add AUTHORS file
          (5)fix bug about CONFB in bit.h

>Version :v1.1.0
 Alias   :
 Date    :
 Note    :(1)update example file of ISP
          (2)delete abolished header file intrasm.h
          (3)move file LICENSE to root path of project
          (4)update Makefile
            - update Makefile to v0.2.1: refactor all code, optimize effect of print; improve speed of clean operation; fix problem that user can't set job server during execute rebuild operation;  support incremental compilation; support compiling custom source file;
            - update Makefile to v0.2.2: fix bug of rebuild function